metadatafullcopy/unpackaged/objects/MRLocation__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Emergency Svces</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Biohazard</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Catastrophes</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Technical Svces</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Code</label>
        <referenceTo>Location_Code__c</referenceTo>
        <relationshipLabel>MRLocations</relationshipLabel>
        <relationshipName>MRLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_description__c</fullName>
        <label>Location description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>MRLocations</relationshipLabel>
        <relationshipName>MRLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MRLocation</label>
    <nameField>
        <displayFormat>MRLocation-{000}</displayFormat>
        <label>MRLocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRLocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>